@@ -23,7 +23,7 @@ package io.crate.metadata.table;
 
 import javax.annotation.Nullable;
 
-public interface SchemaInfo<T extends TableInfo> extends Iterable<T> {
+public interface SchemaInfo<T extends TableInfo> extends Iterable<T>, AutoCloseable {
 
     @Nullable
     TableInfo getTableInfo(String name);
